Fix grid gaps on easy level

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,12 @@ h4 {
 
 .front-image,
 .back-image {
+  max-height: 200px;
+  width: 80%;
+}
+
+.front-image.small-card,
+.back-image.small-card {
   max-height: 110px;
   width: 80%;
 }
